--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-<h1>Hello World</h1>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>bmsgs</title>
+<link href="bmsgs.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+	<div class="head"><h1>3D Data Formats</h1></div>
+	
+	<img src="3dmesh.png" class="box">
+	<div class="head"><h2>Common Formats</h2></div><br>
+		<p>Every 3D file format stores  information about the geometry of a 3 dimensional object. Each extension has its own characteristics, and some can store additional information, such as appearance information (colour, texture), animation, and the scene (camera position, lighting).<br><br><br>These are some of the most commonly used 3D file formats:</p>	
+	
+		<div class="list"><ul>
+			<li>.STL (StereoLitography)</li>
+			<li>.OBJ (Object Wavefront)</li>
+			<li>.STEP</li>
+			<li>.FBX</li>
+			<li>.3DS</li>
+			<li>.USD</li>	
+	</ul></div>
+	
+	<img src="formats.png" class="formats">
+	
+	
+	
+	
+	
+
+	<div class="head"><h2>Desired Outcome</h2></div><br>
+	<p>Since each format has a different way of encoding and can store different aspects of a 3D shape, it is important to keep in mind the end result when working on a 3D model, to ensure that the extension we use will fit our needs accordingly. <br><br><br>There are mainly 4 uses for 3D modeling:</p>
+	<ul>
+			<li>3D Printing</li>
+			<li>Engineering</li>
+			<li>Gaming</li>
+			<li>Animation</li>
+	</ul>
+	
+	<br><br><br><br><br>
+	<p class="footer">To find more information on a suitable 3D file format for your project, please <a href="https://all3dp.com/3d-file-format-3d-files-3d-printer-3d-cad-vrml-stl-obj/>" target="_blank" rel="noopener noreferrer"><b id="hover">click here.</b></a></p>
+</body>
+</html>
