--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>bmsgs</title>
+<title>3D Data Formats</title>
 <link href="bmsgs.css" rel="stylesheet" type="text/css">
 </head>
 
