--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
 
 	
 	<br><br><br><br><br>
-	<div class="footer">To find more information on a suitable 3D file format for your project, please <a href="https://all3dp.com/3d-file-format-3d-files-3d-printer-3d-cad-vrml-stl-obj/>" target="_blank" rel="noopener noreferrer">click here.</a></div>
+	<div class="footer">To find more information on a suitable 3D file format for your project, please <a href="https://all3dp.com/3d-file-format-3d-files-3d-printer-3d-cad-vrml-stl-obj/" target="_blank" rel="noopener noreferrer">click here.</a></div>
 </body>
 </html>
